# doc-search

./: Dockerfile  main.py  pyproject.toml
app/: spiderTest2.py
app/db/: SpiderDocument.py  SpiderDocumentCrud.py  dbManager.py
app/db/base/: BaseFeat.py  config.py  log.py
