[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["huangxz <huangxz@xiaopeng.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.39.0"
fake-useragent = "^1.3.0"
requests = "^2.31.0"
aiohttp = "^3.8.6"
apscheduler = "^3.10.4"
sqlalchemy = "^2.0.25"
asyncpg = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

